tests/toylang/neg/001569_mutation.toylang
program a = { while do do sleep; } .
